@@ -102,7 +102,7 @@ describe "not_found plugin" do
       end
 
       o = Object.new
-      def o.each; end
+      def o.each(&_); end
       route do |r|
         r.halt [404, {}, o]
       end
