@@ -1,3 +1,7 @@
+=== master
+
+* Fix strict_unused_block warnings when running specs on Ruby 3.4 (jeremyevans)
+
 = 3.87.0 (2024-12-17)
 
 * Add host_routing plugin for routing based on request host header (jeremyevans)
